--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
   <body>
 
 <div class="jumbotron center">
-     <h1>Welcome to my ap!</h1>
+     <h1>Welcome to my app!</h1>
      <% if user_signed_in? %>
           # do something
      <% else %>
