--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <%= link_to "Parto.org", root_path, class: "navbar-brand" %>
+    <%= link_to "Partomaya.org", root_path, class: "navbar-brand" %>
   </div>
 
 
