--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -15,3 +15,6 @@
     </div>
   <% end %>
 </div>
+<div class="center">
+   <%= will_paginate @pins, renderer: BootstrapPagination::Rails %>
+</div>
