--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,6 +8,28 @@
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
       <%= devise_error_messages! %>
 
+
+     <div class="form-group">
+       <%= f.label :name %>
+       <%= f.text_field :name, class: "form-control", :autofocus => true %>
+     </div>
+
+          <div class="form-group">
+       <%= f.label :address %>
+       <%= f.text_field :address, class: "form-control", :autofocus => true %>
+     </div>
+
+          <div class="form-group">
+       <%= f.label :phone %>
+       <%= f.text_field :phone, class: "form-control", :autofocus => true %>
+     </div>
+
+
+     <div class="form-group">
+       <%= f.label :center %>
+       <%= f.text_field :center, class: "form-control", :autofocus => true %>
+     </div>
+
       <div class="form-group">
         <%= f.label :email %>
         <%= f.email_field :email, class: "form-control", :autofocus => true %>
