--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,32 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h1>Sign up</h1>
+    <h1>Agregando comadrona</h1>
   </div>
 
   <div class="panel-body">
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
+
+     <div class="form-group">
+        <%= f.label :name %>
+        <%= f.text_field :name, autofocus: true, class: "form-control" %>
+      </div>
+
+           <div class="form-group">
+        <%= f.label :phone %>
+        <%= f.text_field :phone, autofocus: true, class: "form-control" %>
+      </div>
+
+           <div class="form-group">
+        <%= f.label :address %>
+        <%= f.text_field :address, autofocus: true, class: "form-control" %>
+      </div>
+
+           <div class="form-group">
+        <%= f.label :center %>
+        <%= f.text_field :center, autofocus: true, class: "form-control" %>
+      </div>
+
 
       <div class="form-group">
         <%= f.label :email %>
