--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,8 +15,8 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Bienvenido", root_path %></li>
+        <li><%= link_to "Acerca de nosotros", about_path %></li>
         <% if user_signed_in? %>
         <li><%= link_to "Account Settings", edit_user_registration_path %></li>
           <li>
@@ -24,9 +24,13 @@
               <span class="icon circle-with-plus"></span> New Pin
             <% end %>
           </li>
-        <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        <li><%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete %></li>
         <% else %>
-          <li><%= link_to "Sign in", new_user_session_path %></li>
+          <li><%= link_to "Ingresar", new_user_session_path %></li>
+
+
+
+
         <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
