--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -27,9 +27,9 @@
     <div class="row app-align-center">
       <div class="col-sm-5 col-sm-push-7">
         <h6 class="text-muted text-uppercase">High Praise</h6>
-        <h3 class="m-t-0 m-b-md">“Parto.org es una herramienta gratuita para empoderar, brindar apoyo y enseñanza a las comadronas en el interior del país."</h3>
+        <h3 class="m-t-0 m-b-md"> Una herramienta gratuita para empoderar, brindar apoyo y enseñanza a las comadronas en el interior del país.</h3>
         <p class="m-b-md text-muted">Dr. Emilio Pérez, PHD</p>
-        <button class="btn btn-primary btn-lg">Try it now</button>
+        <button class="btn btn-primary btn-lg">Ingresar</button>
       </div>
       <div class="col-sm-6 col-sm-pull-5">
         <img src="http://www.elmendolotudo.com.ar/wp-content/uploads/portrait_of_a_senior_doctor_writing_reports_isolated_on_white_background_w640.jpeg?dd8ef2">
@@ -45,9 +45,12 @@
     <img src="assets/startup-5.svg">
     <img src="assets/startup-6.svg">
     <img src="assets/startup-7.svg">
-    <img src="assets/startup-8.svg">
   </div>
 </div>
+
+<br>
+<br>
+
 
 <div class="block-secondary app-block-marketing-grid">
   <div class="container text-center">
@@ -73,29 +76,22 @@
         <p><strong>Turnaround.</strong> Our data analysis is distributed, so it processes in seconds.</p>
       </div>
     </div>
-
-    <div class="row app-marketing-grid">
-      <div class="col-sm-4 p-x-md m-b-lg">
-        <img class="m-b" src="assets/startup-12.svg">
-        <p><strong>Rich calculations.</strong> Limitless ways to splice and dice your data.</p>
-      </div>
-      <div class="col-sm-4 p-x-md m-b-lg">
-        <img class="m-b" src="assets/startup-13.svg">
-        <p><strong>Mobile apps.</strong> iOS and Android apps available for monitoring.</p>
-      </div>
-      <div class="col-sm-4 p-x-md m-b-lg">
-        <img class="m-b" src="assets/startup-14.svg">
-        <p><strong>Secure connections.</strong> Every single request is routed through HTTPS.</p>
-      </div>
-    </div>
   </div>
 </div>
+
+<br>
+<br>
+
 
 <div class="app-price-plans">
   <div class="container text-center">
 
     <div class="row m-b-lg">
       <div class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
+        <br>
+        <br>
+
+
         <h6 class="text-muted text-uppercase">Business Talk</h6>
         <h3  class="m-t-0">No plans. We just bump your plan whenever you need it.</h3>
       </div>
@@ -106,7 +102,7 @@
         <div class="p-x">
           <h6 class="text-muted text-uppercase m-b">Personal</h6>
           <img class="m-b" src="assets/startup-15.svg">
-          <p>Plenty of processing power for any personal projects, big or small.</p>
+          <p>Plenty of power for any personal projects, big or small.</p>
         </div>
 
         <ul class="list-unstyled list-bordered text-left m-y-md">
@@ -156,59 +152,14 @@
         </button>
       </div>
     </div>
+<br>
+<br>
+
 
   </div>
 </div>
 
 
-
-<div class="block block-inverse app-footer">
- <div class="container">
-    <div class="row">
-      <div class="col-sm-5 m-b-md">
-        <ul class="list-unstyled list-spaced">
-          <li class="m-b"><h6 class="text-uppercase">About</h6></li>
-          <li class="text-muted">
-           We’ve been working on Go Analytics for the better part of a decade and are super proud of what we’ve created. If you’d like to learn more, or are interested in a job, contact us anytime at <a href="mailto: themes@getbootstrap.com">themes@getbootstrap.com</a>.
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-2 col-sm-offset-1 m-b-md">
-        <ul class="list-unstyled list-spaced">
-          <li class="m-b"><h6 class="text-uppercase">Product</h6></li>
-          <li class="text-muted">Features</li>
-          <li class="text-muted">Examples</li>
-          <li class="text-muted">Tour</li>
-          <li class="text-muted">Gallery</li>
-        </ul>
-      </div>
-      <div class="col-sm-2 m-b-md">
-        <ul class="list-unstyled list-spaced">
-          <li class="m-b"><h6 class="text-uppercase">Apis</h6></li>
-          <li class="text-muted">Rich data</li>
-          <li class="text-muted">Simple data</li>
-          <li class="text-muted">Real time</li>
-          <li class="text-muted">Social</li>
-        </ul>
-      </div>
-      <div class="col-sm-2 m-b-md">
-        <ul class="list-unstyled list-spaced">
-          <li class="m-b"><h6 class="text-uppercase">Legal</h6></li>
-          <li class="text-muted">Terms</li>
-          <li class="text-muted">Legal</li>
-          <li class="text-muted">Privacy</li>
-          <li class="text-muted">License</li>
-        </ul>
-      </div>
-    </div>
-  </div>
 </div>
-
-</div>
-
-
-
-
-
   </body>
 </html>
