--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -8,7 +8,9 @@
       </div>
       <div class="panel-body">
         <p><%= @pin.description %></p>
-        <p><strong><%= @pin.user.email if @pin.user %></strong></p>
+        <p><strong><%= @pin.user.name%></strong></p>
+        
+
 
         <% if @pin.user == current_user %>
          <%= link_to 'Edit', edit_pin_path(@pin) %>
