--- a/app/assets/stylesheets/application-startup.css
+++ b/app/assets/stylesheets/application-startup.css
@@ -107,10 +107,10 @@
 
 /* footer block */
 .app-footer {
-  background-color: #262F36;
+  background-color: #4782DC;
 }
 .app-footer a {
-  color: #fff;
+  color: #4782DC;
 }
 
 
