--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="block block-inverse app-footer">
+<div class="block app-footer">
  <div class="container">
     <div class="row">
       <div class="col-sm-5 m-b-md">
