--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
           </li>
         <li><%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete %></li>
         <% else %>
-          <li><%= link_to "Ingresar", new_user_session_path %></li>
+          <li><%= link_to "Crear cuenta", new_user_registration_path %></li>
 
 
 
