sigo con el homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
   <div class="container">
     <div class="row app-align-center">
       <div class="col-sm-5 col-sm-push-7">
-        <h6 class="text-muted text-uppercase">High Praise</h6>
+        <h6 class="text-muted text-uppercase">¿Qué es partomaya.org?</h6>
         <h3 class="m-t-0 m-b-md"> Una herramienta gratuita para empoderar, brindar apoyo y enseñanza a las comadronas en el interior del país.</h3>
         <p class="m-b-md text-muted">Dr. Emilio Pérez, PHD</p>
 
@@ -58,8 +58,8 @@
 
     <div class="row m-b-lg">
       <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
-        <h6 class="text-muted text-uppercase">Inside the machine</h6>
-        <h3  class="m-t-0 m-b">It’s not hard to see how we make your life easier every day.</h3>
+        <h6 class="text-muted text-uppercase">Un poco de cómo funciona</h6>
+        <h3  class="m-t-0 m-b">Le permitimos a las comadronas fácilmente comunicar lo que están viviendo.</h3>
       </div>
     </div>
 
@@ -160,7 +160,36 @@
   </div>
 </div>
 
-
 </div>
+
+
+<div class="block text-center">
+  <div class="container-fluid">
+    <h4 class="m-b-md">
+      ¿Quieres tener más información acerca de nuestra misión? <strong>Suscríbete</strong> a nuestro boletín hoy mismo!
+    </h4>
+    <form class="form-inline">
+      <input class="form-control m-b" placeholder="Correo electrónico">
+      <button class="btn btn-primary m-b">Quiero recibir noticias</button>
+    </form>
+    <small class="text-muted">
+      Al suscribirme a este boletín entiendo que me van a mandar ocasionalmente correos.
+    </small>
+  </div>
+</div>
+<div class="block block-bordered text-center">
+  <div class="container-fluid">
+   <blockquote class="pull-quote">
+      <p>
+        “Notice that simple inset border above. Isn't it lovely.”
+      </p>
+      <cite>Mark Otto, Huge Nerd</cite>
+    </blockquote>
+  </div>
+</div>
+
+
+
+
   </body>
 </html>
