--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,9 +3,9 @@
     <div class="row">
       <div class="col-sm-5 m-b-md">
         <ul class="list-unstyled list-spaced">
-          <li class="m-b"><h6 class="text-uppercase">About</h6></li>
+          <li class="m-b"><h6 class="text-uppercase">Acerca de nosotros</h6></li>
           <li class="text-muted">
-           We’ve been working on Go Analytics for the better part of a decade and are super proud of what we’ve created. If you’d like to learn more, or are interested in a job, contact us anytime at <a href="mailto: themes@getbootstrap.com">themes@getbootstrap.com</a>.
+           Somos un grupo de profesionales de la salud que creemos en la igualdad de oportunidades en todas las personas. Queremos darle el derecho de acceso de información a todas las personas, y partomaya.org nos trae un paso más cerca de esta realidad. <a href="mailto: edgar@partomaya.org">edgar@partomaya.org</a>.
           </li>
         </ul>
       </div>
